# external-api-connection

./: .env  ingest_push_to_snowflake.py  pyproject.toml  test_api.py
