[project]
name = "ext-api-conn"
version = "0.1.0"
description = "External API connection"
authors = [
    {name = "jparep",email = "parepson@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
